--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,12 @@ h2 {
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+h4 {
+    font-family: Arial, Helvetica, sans-serif;
+}
 img {
     width: 200px;
     height: 300px;
