--- a/style/style.css
+++ b/style/style.css
@@ -52,4 +52,17 @@ img {
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 5px;
     float: left;
+    margin-top: 30px;
+}
+.section2 {
+    margin-right: 400px;
+    margin-top: 100px;
+}
+ul {
+    font-family: Arial, Helvetica, sans-serif;
+}
+.section3 {
+    position: absolute;
+    right: 100px;
+    top: 50%;
 }
