--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,14 @@
-aside {
-    width: 30%;
-    padding-left: 15px;
-    margin-left: 15px;
-    float: right;
-}
+
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
-h2 {
+p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+#title {
     position: absolute;
     top: 70px;
     left: 241px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-p {
     font-family: Arial, Helvetica, sans-serif;
 }
 h3 {
@@ -66,3 +61,14 @@ ul {
     right: 100px;
     top: 50%;
 }
+@media only screen and (min-width: 1000px) {
+    body {
+        background-color: lightblue;
+      }
+    }
+
+@media only screen and (max-width: 1000px) {
+    body {
+      background-color: pink;
+    }
+  }
